python/testData/inspections/PyUnresolvedReferencesInspection/unusedUnresolvedModuleImported.py
<warning descr="Unused import statement">import <error descr="No module named spam">spam</error></warning>
